  * Catching modprobe error in case of absence of the kernel modules, or
    a non-modular kernel. Thanks to Holger Levsen.
  * Copy raid456 kernel module into initramfs, if present (closes: #380152).
  * checkarray: check for presence of active RAID arrays and give an
    appropriate error if there are none present (closes: #379019).
  * checkarray: skip sync for RAID0 devices (closes: #379352).
  * Removed the code writing auto-detected devices to /var, which was silly
    since /var isn't necessarily mounted yet by the time mdadm-raid is called.
    Thanks to Maurizio Avogadro for pointing this out.
  * Add reference to BAARF to README.Debian and included the RAID5 vs RAID10
    article from the BAARF website.
  * Updated debconf translations:
    - Japanese by Hideki Yamane, thanks!
    - French by Florentin Duneau, thanks! (closes: #379511)

 -- martin f. krafft <madduck@debian.org>  Thu, 27 Jul 2006 22:49:32 +0100

mdadm (2.5.2-7) unstable; urgency=low

  * Release to unstable.

 -- martin f. krafft <madduck@debian.org>  Thu, 20 Jul 2006 17:23:23 +0100

mdadm (2.5.2-6) experimental; urgency=low

  * Adding mdrun to generated udeb. I will only remove mdrun after etch.
  * Updated debconf translations:
    - Dutch, thanks to Frans "Franzerl" Pop! (closes: #377412)
    - French, thanks to Florentin Duneau! (closes: #377968)

 -- martin f. krafft <madduck@debian.org>  Thu, 13 Jul 2006 23:11:24 +0200

mdadm (2.5.2-5) UNRELEASED; urgency=low

  * Remove the check for the lvm prereq in the initramfs hook, as #369617 is
    now fixed. Thus conflicts against initramfs-tools (<< 0.65).
  * Updated debconf translations:
    - German, thanks to Mario Joußen!
  * Added short note about maintenance in SVN to README.Debian.

 -- martin f. krafft <madduck@debian.org>  Thu, 13 Jul 2006 23:10:36 +0200

mdadm (2.5.2-4) UNRELEASED; urgency=low

  * The "it takes two to swing" release.
  * Now does not stop arrays on upgrade or remove. Thanks (and sorry) to